--- a/src/Shared/Components/Modal/Modal.css
+++ b/src/Shared/Components/Modal/Modal.css
@@ -1,19 +1,23 @@
 .modal {
   z-index: 100;
   position: fixed;
-  top: 22vh;
-  left: 10%;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 80%;
-  background: white;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  max-width: 500px;
+  background: #f9f9f9;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  padding: 20px;
 }
 
 .modal__header {
   width: 100%;
-  padding: 1rem 0.5rem;
+  padding: 1rem 0;
   background: #2a006e;
   color: white;
+  text-align: center;
 }
 
 .modal__header h2 {
@@ -21,38 +25,34 @@
 }
 
 .modal__content {
-  padding: 1rem 0.5rem;
+  padding: 1rem 0;
 }
 
 .modal__footer {
-  padding: 1rem 0.5rem;
+  padding: 1rem 0;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
   .modal {
-    left: calc(50% - 20rem);
-    width: 40rem;
+    width: 60%;
   }
 }
 
 .modal-enter {
-  transform: translateY(-10rem);
   opacity: 0;
 }
 
 .modal-enter-active {
-  transform: translateY(0);
   opacity: 1;
-  transition: all 200ms;
+  transition: opacity 200ms;
 }
 
 .modal-exit {
-  transform: translateY(0);
   opacity: 1;
 }
 
 .modal-exit-active {
-  transform: translateY(-10rem);
   opacity: 0;
-  transition: all 200ms;
+  transition: opacity 200ms;
 }
